--- a/style.css
+++ b/style.css
@@ -330,8 +330,8 @@ nav .fa-solid {
     }
 
     .header-text {
-        margin-top: 100%;
-        font-size: 16px;
+        /* margin-top: 100%; */
+        font-size: 20px;
     }
 
     .header-text h1 {
@@ -371,11 +371,41 @@ nav .fa-solid {
         font-size: 40px;
     }
 
+    .about-col-1,
+    .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 5px;
+    }
+
+    .about-col-2 {
+        font-size: 18px;
+        margin-left: 20px;
+    }
+
+    .tab-links {
+        font-size: 16px;
+    }
+
     .context {
         color: black;
         font-size: 40px;
         font-weight: 600;
         text-align: center;
+    }
+
+    .contact-right {
+        flex-basis: 100%;
+    }
+
+    .contact-left {
+        flex-basis: 100%;
+    }
+
+    .contactain {
+        margin-top: 10px;
     }
 
 }
